# travel_agency_chatbot

./: .gitignore  pyproject.toml
src/: config.py  main.py
src/chat_stream_core/: chatbot.py  event_handler.py  history.py  propmts.py  session_mapper.py
src/data_io/: files.py  images.py
src/models/: openai_client.py
src/ui/: layout.py
src/utils/: utils.py
